[package]
name = "node"
version = "0.18.0"
edition = "2021"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
ark-ff = { workspace = true }
base64 = { workspace = true }
blake2 = { workspace = true }
derive_more = { workspace = true }
graphannis-malloc_size_of = { workspace = true }
graphannis-malloc_size_of_derive = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
ledger = { workspace = true }
mina-core = { path = "../core" }
mina-curves = { workspace = true }
mina-hasher = { workspace = true }
mina-node-account = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
multihash = { workspace = true }
num_enum = { workspace = true }
p2p = { path = "../p2p" }
poseidon = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
redux = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = [
  "unbounded_depth",
  "arbitrary_precision",
] }
serde_with = { workspace = true, features = ["time_0_3"] }
snark = { path = "../snark" }
static_assertions = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["parsing"] }
tokio = { workspace = true }
vrf = { workspace = true }

[build-dependencies]
regex = { workspace = true }
rust-format = { workspace = true }
vergen = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
linkme = { workspace = true }
redux = { workspace = true, features = ["serializable_callbacks"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true }

[features]
serializable_callbacks = []
replay = []
p2p-webrtc = ["p2p/p2p-webrtc"]
p2p-libp2p = ["p2p/p2p-libp2p"]
fuzzing = ["p2p/fuzzing"]
