[package]
name = "poseidon"
version = "0.17.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
mina-curves = { workspace = true }
o1-utils = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
