[package]
name = "mina-producer-dashboard"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "mina-producer-dashboard"
path = "src/bin/producer_dashboard.rs"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
graphql_client = { version = "0.14", features = ["reqwest"] }
mina-node-account = { workspace = true }
mina-p2p-messages = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.83" }
sled = "0.34"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }
thiserror = "1.0.44"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
vrf = { workspace = true }
warp = "0.3"
