[package]
name = "mina-producer-dashboard"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "mina-producer-dashboard"
path = "src/bin/producer_dashboard.rs"

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
graphql_client = { workspace = true }
mina-node-account = { workspace = true }
mina-p2p-messages = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sled = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
vrf = { workspace = true }
warp = { workspace = true }
