[package]
name = "snark"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ark-ff = { workspace = true }
kimchi = { workspace = true }
mina-curves = { workspace = true }
mina-hasher = { workspace = true }
mina-poseidon = { workspace = true }
mina-signer = { workspace = true }
o1-utils = { workspace = true }
poly-commitment = { workspace = true }

ark-ec = { version = "0.3.0", features = ["std"] }
ark-poly = { version = "0.3.0", features = ["std"] }
derive_more = "0.99.17"
hex = "0.4"
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
num-bigint = "0.4"
once_cell = "1"
poseidon = { workspace = true }
rand = "0.8"
rayon = "1.10"
redux = { workspace = true }
serde = { version = "1.0", features = ["rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
sha2 = "0.10"
strum_macros = "0.26"
thiserror = "1.0.50"

openmina-core = { path = "../core" }

[dev-dependencies]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
linkme = { workspace = true }
redux = { workspace = true, features = ["serializable_callbacks"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"
