[package]
name = "snark"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ark-ff = { workspace = true }
kimchi = { workspace = true }
mina-curves = { workspace = true }
mina-hasher = { workspace = true }
mina-poseidon = { workspace = true }
mina-signer = { workspace = true }
o1-utils = { workspace = true }
poly-commitment = { workspace = true }

ark-ec = { workspace = true }
ark-poly = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
poseidon = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
redux = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true, features = ["float_roundtrip"] }
sha2 = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }

mina-core = { path = "../core" }

[dev-dependencies]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
linkme = { workspace = true }
redux = { workspace = true, features = ["serializable_callbacks"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
