[package]
name = "vrf"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.70"
ark-ec = { version = "0.3.0", features = ["std"] }
ark-ff = { workspace = true }
ark-serialize = { version = "0.3.0", features = ["std"] }
hex = "0.4.3"
ledger = { workspace = true }
mina-curves = { workspace = true }
mina-hasher = { workspace = true }
mina-node-account = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
num = { version = "0.4", features = ["std"] }
o1-utils = { workspace = true }
poseidon = { workspace = true }
redux = { workspace = true }
serde = "1.0.147"
serde_json = { version = "1.0.82", features = [
  "unbounded_depth",
  "arbitrary_precision",
] }
thiserror = "1.0.37"
# num = "0.4"
bs58 = "0.4.0"
itertools = "0.12"
rand = "0.8"
sha2 = "0.10"
