[package]
name = "mina-node-account"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
mina-core = { path = "../../core" }
mina-hasher = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = [
  "unbounded_depth",
  "arbitrary_precision",
] }
thiserror = { workspace = true }
