[package]
name = "mina-node-common"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
ark-ff = { workspace = true }
binprot = { workspace = true }
binprot_derive = { workspace = true }
bitflags = { workspace = true }
jsonpath-rust = { workspace = true }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "macros"] }
tracing = { workspace = true }
vrf = { workspace = true }

mina-core = { path = "../../core" }
node = { path = "../../node", features = ["replay"] }
rsa = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
redux = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gloo-timers = { workspace = true }
gloo-utils = { workspace = true }
tracing-wasm = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features = ["serializable_callbacks"] }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
libp2p-identity = { workspace = true, features = ["ed25519", "rand", "serde"] }
mio = { workspace = true }
reqwest = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
google-cloud-storage = { workspace = true }
google-cloud-auth = { workspace = true }


[features]
p2p-webrtc = ["node/p2p-webrtc"]
p2p-libp2p = ["node/p2p-libp2p"]
