[package]
name = "openmina-node-invariants"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "openmina_node_invariants"
path = "src/lib.rs"

[dependencies]
documented = { version = "0.6" }
lazy_static = "1.4.0"
node = { path = "../" }
redux = { workspace = true }
serde = "1.0.219"
serde_json = { version = "1.0.82", features = [
  "unbounded_depth",
  "arbitrary_precision",
] }
strum = "0.26"
strum_macros = "0.26"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features = ["serializable_callbacks"] }
