[package]
name = "mina-node-invariants"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "mina_node_invariants"
path = "src/lib.rs"

[dependencies]
documented = { workspace = true }
lazy_static = { workspace = true }
node = { path = "../" }
redux = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = [
  "unbounded_depth",
  "arbitrary_precision",
] }
strum = { workspace = true }
strum_macros = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features = ["serializable_callbacks"] }
