[package]
name = "openmina-node-native"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.70"
bs58 = { version = "0.4" }
bytes = "1.4.0"
dataloader = "0.18"
derive_more = "0.99.17"
getrandom = "0.2.15"
hex = { version = "0.4.3" }
jsonpath-rust = "0.5.0"
juniper = { workspace = true }
juniper_warp = { version = "0.8.0" }
ledger = { workspace = true }
libp2p-identity = { version = "=0.2.7", features = ["peerid"] }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
nix = { version = "0.26.2", features = ["signal"] }
o1-utils = { workspace = true }
rand = "0.8"
rayon = "1.5"
redux = { workspace = true, features = ["serializable_callbacks"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0.94"
sha3 = "0.10.8"
strum = "0.26.2"
strum_macros = "0.26.4"
thiserror = "1.0.44"
tokio = { version = "1.26.0", features = ["process", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
vrf = { workspace = true }
warp = "0.3"

node = { path = "../../node", features = ["replay"] }
openmina-core = { path = "../../core" }
openmina-node-common = { path = "../common" }

[dev-dependencies]
openmina-producer-dashboard = { workspace = true }

[features]
default = ["p2p-libp2p"]
p2p-webrtc = ["openmina-node-common/p2p-webrtc"]
p2p-libp2p = ["openmina-node-common/p2p-libp2p"]
