[package]
name = "mina-node-native"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
dataloader = { workspace = true }
derive_more = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
jsonpath-rust = { workspace = true }
juniper = { workspace = true }
juniper_warp = { workspace = true }
ledger = { workspace = true }
libp2p-identity = { workspace = true, features = ["peerid"] }
mina-core = { path = "../../core" }
mina-node-common = { path = "../common" }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
nix = { workspace = true, features = ["signal"] }
node = { path = "../../node", features = ["replay"] }
o1-utils = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
redux = { workspace = true, features = ["serializable_callbacks"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vrf = { workspace = true }
warp = { workspace = true }

[dev-dependencies]
mina-producer-dashboard = { workspace = true }

[features]
default = ["p2p-libp2p"]
p2p-webrtc = ["mina-node-common/p2p-webrtc"]
p2p-libp2p = ["mina-node-common/p2p-libp2p"]
