[package]
name = "mina-node-testing"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "mina_node_testing"
path = "src/lib.rs"

[[bin]]
name = "mina-node-testing"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
axum = "0.7"
base64 = "0.22"
bs58 = { version = "0.4" }
derive_more = "0.99.17"
documented = { version = "0.6", optional = true }
hex = "0.4.3"
lazy_static = "1.4.0"
ledger = { workspace = true }
libp2p = { workspace = true, features = [
  "macros",
  "serde",
  "tcp",
  "dns",
  "tokio",
  "yamux",
  "pnet",
  "noise",
  "gossipsub",
  "identify",
  "kad",
] }
mina-p2p-messages = { workspace = true }
multiaddr = { version = "0.18.1" }
multihash = "0.18.1"
num_cpus = "1.0"
postcard = { version = "1.0.9", features = ["use-std"] }
rand = "0.8"
rayon = "1.5"
redux = { workspace = true }
serde = "1.0.219"
serde_json = { version = "1.0.82", features = [
  "unbounded_depth",
  "arbitrary_precision",
] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.37"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.26.0" }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = { version = "0.1", features = ["std"] }
tracing-log = "0.2.0"
vrf = { workspace = true }

clap = { version = "4.3", features = ["derive", "env"] }
console = "0.15.5"
ctrlc = "3.4.2"
nix = { version = "0.27.1", features = ["process", "signal"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
temp-dir = "0.1.11"

mina-core = { path = "../../core" }
mina-node-invariants = { path = "../../node/invariants" }
mina-node-native = { path = "../../node/native" }
node = { path = "../../node" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features = ["serializable_callbacks"] }
libp2p-identity = { version = "=0.2.7", features = [
  "ed25519",
  "rand",
  "serde",
] }

[features]
default = ["p2p-libp2p", "scenario-generators"]
scenario-generators = ["documented"]
p2p-webrtc = ["mina-node-native/p2p-webrtc"]
p2p-libp2p = ["mina-node-native/p2p-libp2p"]
