[package]
name = "mina-node-testing"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "mina_node_testing"
path = "src/lib.rs"

[[bin]]
name = "mina-node-testing"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
derive_more = { workspace = true }
documented = { workspace = true, optional = true }
hex = { workspace = true }
lazy_static = { workspace = true }
ledger = { workspace = true }
libp2p = { workspace = true, features = [
  "macros",
  "serde",
  "tcp",
  "dns",
  "tokio",
  "yamux",
  "pnet",
  "noise",
  "gossipsub",
  "identify",
  "kad",
] }
mina-p2p-messages = { workspace = true }
multiaddr = { workspace = true }
multihash = { workspace = true }
num_cpus = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
redux = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = [
  "unbounded_depth",
  "arbitrary_precision",
] }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting"] }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
vrf = { workspace = true }

clap = { workspace = true, features = ["derive", "env"] }
console = { workspace = true }
ctrlc = { workspace = true }
nix = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
temp-dir = { workspace = true }

mina-core = { path = "../../core" }
mina-node-invariants = { path = "../../node/invariants" }
mina-node-native = { path = "../../node/native" }
node = { path = "../../node" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features = ["serializable_callbacks"] }
libp2p-identity = { workspace = true, features = ["ed25519", "rand", "serde"] }

[features]
default = ["p2p-libp2p", "scenario-generators"]
scenario-generators = ["documented"]
p2p-webrtc = ["mina-node-native/p2p-webrtc"]
p2p-libp2p = ["mina-node-native/p2p-libp2p"]
