[package]
name = "mina-node-web"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0.99.17"
rand = "0.8"
rayon = "1.5"
serde = "1.0.158"
serde_json = "1.0.94"
# reqwest = { version = "0.11.24", features = ["json"] }
anyhow = "1.0.70"
bytes = "1.4.0"
jsonpath-rust = "0.5.0"
ledger = { workspace = true }
libp2p-identity = { version = "=0.2.7", features = ["peerid"] }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
redux = { workspace = true }
thiserror = "1.0.44"
vrf = { workspace = true }

console_error_panic_hook = "0.1"
gloo-utils = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

mina-node-common = { path = "../common" }
node = { path = "../../node" }

[features]
default = ["p2p-webrtc"]
p2p-webrtc = ["mina-node-common/p2p-webrtc"]
