[package]
name = "mina-node-web"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# reqwest = { version = "0.11.24", features = ["json"] }
anyhow = { workspace = true }
bytes = { workspace = true }
jsonpath-rust = { workspace = true }
ledger = { workspace = true }
libp2p-identity = { workspace = true, features = ["peerid"] }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
redux = { workspace = true }
thiserror = { workspace = true }
vrf = { workspace = true }

console_error_panic_hook = { workspace = true }
gloo-utils = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

mina-node-common = { path = "../common" }
node = { path = "../../node" }

[features]
default = ["p2p-webrtc"]
p2p-webrtc = ["mina-node-common/p2p-webrtc"]
