[package]
name = "mina-node-web"
version = "0.18.1"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
console_error_panic_hook = { workspace = true }
derive_more = { workspace = true }
gloo-utils = { workspace = true }
js-sys = { workspace = true }
jsonpath-rust = { workspace = true }
ledger = { workspace = true }
libp2p-identity = { workspace = true, features = ["peerid"] }
mina-node-common = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
node = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
redux = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
vrf = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[features]
default = ["p2p-webrtc"]
p2p-webrtc = ["mina-node-common/p2p-webrtc"]
