[package]
name = "p2p-testing"
version = "0.16.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mina-p2p-messages = { path = "../../mina-p2p-messages" }
p2p = { path = "..", features = ["p2p-libp2p"] }
redux = { workspace = true }

derive_more = "0.99.17"
futures = "0.3.30"
lazy_static = "1.4.0"
libp2p = { workspace = true, features = [
  "macros",
  "serde",
  "tcp",
  "dns",
  "tokio",
  "yamux",
  "pnet",
  "noise",
  "gossipsub",
  "identify",
  "kad",
] }
libp2p-rpc-behaviour = { path = "../libp2p-rpc-behaviour" }
mina-core = { path = "../../core" }
pin-project-lite = "0.2"
rand = "0.8.5"
serde_json.workspace = true
thiserror = "1.0.57"
tokio = { version = "1.26.0", features = ["sync", "macros"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features = ["serializable_callbacks"] }
libp2p-identity = { version = "=0.2.7", features = [
  "ed25519",
  "rand",
  "serde",
] }
