[package]
name = "mina-archive-breadcrumb-compare"
version = "0.16.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "400b52c" }
clap = { version = "4.5", features = ["derive", "env"] }
mina-p2p-messages = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true }
serde_json = "1.0"
similar = "2.6.0"
tokio = { version = "1.0", features = ["full"] }
