[package]
name = "mina-archive-breadcrumb-compare"
version = "0.17.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
binprot = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
mina-p2p-messages = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
tokio = { workspace = true, features = ["full"] }
