[package]
name = "transaction_fuzzer"
version = "0.17.0-alpha"
edition = "2021"


[dependencies]
ark-ec.workspace = true
ark-ff = { workspace = true }
ark-serialize = "0.4.2"
bitvec = "1.0.1"
btreemultimap = "0.1.1"
flate2 = "1.0.24"
leb128 = "0.2.1"
ledger = { path = "../../ledger", package = "mina-tree", features = [
  "fuzzing",
] }
md5 = "0.7.0"
mina-core = { path = "../../core" }
mina-curves = { workspace = true }
mina-hasher = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
object = "0.37.1"
poseidon = { workspace = true }
rand = { version = "0.8.5", features = ["small_rng"] }
ring_buffer = "2.0.2"
rsprocmaps = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina", features = [ "parallel", "asm", "std" ] }
#ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina", features = [ "std" ] }
itertools = "0.12.0"
num-bigint = "0.4.0"
once_cell = "1.18.0"
text-diff = "0.4.0"
tuple-map = "0.4.0"
#binprot = "0.1.7"
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "400b52c" }
binprot_derive = { git = "https://github.com/openmina/binprot-rs", rev = "400b52c" }
clap = "4.5.20"
node = { path = "../../node" }

[profile.release]
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true
lto = true
panic = "abort"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(unstable)'] }

[features]
nightly = []
