[package]
name = "mina-gossipsub-sandbox"
version = "0.16.0"
edition = "2021"

[dependencies]
bs58 = { version = "0.5.0", features = ["check"] }
env_logger = { version = "0.11.3" }
log = { version = "0.4.17" }
rand = { version = "0.8.5" }
structopt = { version = "0.3.26" }

tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

libp2p = { workspace = true }
mina-transport = { path = "../transport" }
