[package]
name = "mina-gossipsub-sandbox"
version = "0.17.0"
edition = "2021"

[dependencies]
bs58 = { workspace = true, features = ["check"] }
env_logger = { workspace = true }
libp2p = { workspace = true }
log = { workspace = true }
mina-transport = { path = "../transport" }
rand = { workspace = true }
structopt = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
