[package]
name = "heartbeats-processor"
version = "0.16.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
firestore = "0.44"
gcloud-sdk = { version = "0.26.0", default-features = false, features = [
  "google-firestore-v1",
] }
mina-tree = { path = "../../ledger" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snark = { path = "../../snark" }
sqlx = { version = "0.8", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "chrono",
] }
tokio = { version = "1.28", features = ["full", "time"] }

mina-p2p-messages = { workspace = true }
openmina-core = { path = "../../core" }
