[package]
name = "heartbeats-processor"
version = "0.17.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
firestore = { workspace = true }
gcloud-sdk = { workspace = true }
mina-tree = { path = "../../ledger" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
snark = { path = "../../snark" }
sqlx = { workspace = true, features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "chrono",
] }
tokio = { workspace = true, features = ["full", "time"] }

mina-core = { path = "../../core" }
mina-p2p-messages = { workspace = true }
