[package]
name = "ledger-tool"
version = "0.17.0-alpha"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = { version = "0.3.26" }

ledger = { path = "../../ledger", package = "mina-tree" }

mina-curves = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
node = { path = "../../node" }
