[package]
name = "ledger-tool"
version = "0.18.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
structopt = { workspace = true }

ledger = { path = "../../ledger", package = "mina-tree" }

mina-curves = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
node = { path = "../../node" }
